# novapay

./: .gitignore  CLAUDE.md  LICENSE  README.md  render.yaml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/data/: account.json  transactions.json
backend/app/models/: __init__.py  account.py  transaction.py
backend/app/routers/: account.py  chat.py  transactions.py
backend/app/services/: chat_orchestrator.py  chunker.py  context.py  email.py  ingestion.py  llm.py  tools.py  vector_store.py
backend/data/knowledge_base/: account-closing.md  account-joint.md  account-limits.md  account-opening.md  account-settings.md  account-statements.md  account-types.md  account-upgrade.md  account-verification.md  card-contactless.md  card-controls.md  card-physical.md  card-pin.md  card-replacement.md  card-virtual.md  feature-bill-pay.md  feature-cashback.md  feature-direct-deposit.md  feature-mobile-app.md  feature-notifications.md  feature-referrals.md  feature-savings-goals.md  security-2fa.md  security-fraud-reporting.md  security-login.md  security-password.md  security-suspicious-activity.md  transaction-categories.md  transaction-disputes.md  transaction-pending.md  transaction-recurring.md  (+5 more)
backend/tests/: _anthropic_stream.py  conftest.py  test_account.py  test_chat_endpoint.py  test_chat_orchestrator.py  test_chunker.py  test_context.py  test_email.py  test_ingestion.py  test_llm.py  test_retrieval_quality.py  test_tools.py  test_transactions.py  test_user_flows.py  test_vector_store.py
(+30 files in other folders)
