[project]
name = "novapay-backend"
version = "0.1.0"
description = "NovaPay AI support agent backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "anthropic>=0.52.0",
    "openai>=1.82.0",
    "chromadb>=1.0.0",
    "pydantic-settings>=2.9.0",
    "sse-starlette>=2.3.0",
    "resend>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
    "mypy>=1.15.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: requires OPENAI_API_KEY and real ChromaDB (skip with -m 'not integration')",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
